# native-android

./: .gitignore  .gitmodules  AndroidManifest.xsl  Makefile  README  README.md  build.js  generate.sh  links.json  old Makefile  package-lock.json  package.json  preinstall.sh
TeaLeaf/: AndroidManifest.xml
TeaLeaf/jni/platform/: native.cpp
TeaLeaf/src/com/tealeaf/: TeaLeaf.java  TeaLeafReceiver.java
TeaLeaf/src/com/tealeaf/plugin/: IPlugin.java
appcompat-v7/: AndroidManifest.xml  project.properties
gradleops/: README.md  template
gradleops/AndroidSeed/: build.gradle  build.js
gradleops/AndroidSeed/app/: build.gradle  google-services.json
gradleops/AndroidSeed/app/src/main/: AndroidManifest.xml
gradleops/AndroidSeed/gradle/wrapper/: gradle-wrapper.properties
gradleops/AndroidSeed/tealeaf/: build.gradle  proguard-rules.pro
gradleops/AndroidSeed/tealeaf/src/main/: AndroidManifest.xml
gradleops/AndroidSeed/tealeaf/src/main/jni/: Android.mk  Application.mk  AssetExtractor.cpp  Constants.cpp  JEnv.cpp  (+6 more)
gradleops/TeaLeaf/app/: build.gradle
gradleops/TeaLeaf/app/src/main/: AndroidManifest.xml
gradleops/TeaLeafGradle/: generate.sh  import-summary.txt
gradleops/TeaLeafGradle/app/: build.gradle
gradleops/TeaLeafGradle/app/src/main/: AndroidManifest.xml
gradleops/js/: CMakeLists.txt  js_context.cpp  js_haptics.cpp  js_input.h  js_locale.cpp  js_overlay.h  js_photo.cpp  js_socket.cpp  js_socket.h  js_sound.cpp  js_string_cache.h  js_textbox.cpp  js_timestep_view.cpp  js_xhr.cpp
gradleops/js original/: js_animate.cpp  js_before_inspector.cpp  js_context.cpp  js_image_cache.cpp  js_local_storage.h  js_locale.h  js_navigator.h  js_socket.cpp  js_sound.h  js_timestep_image_map.cpp  js_timestep_view.cpp
(+119 files in other folders)
